# mazo_scraper_vacantes

./: CHANGELOG.md  README.md  main.py  mejoras.md  pyproject.toml  requirements.txt
output/: 29_01_analista.csv  combined_analista de finanzas_2026-01-04.csv  combined_analista de finanzas_2026-01-04.json  combined_analista de finanzas_2026-01-04_tier1.csv  combined_analista_2026-01-06.csv  combined_analista_2026-01-06.json  combined_analista_2026-01-14.csv  combined_analista_2026-01-14.json  top_analista de finanzas_2026-01-04.csv  top_analista_2026-01-06.csv  top_analista_2026-01-14.csv  top_analista_2026-01-29.csv
src/: bumeran.py  computrabajo.py  indeed.py  laborum.py  pipeline.py  utils.py
src/core/: base.py  browser.py
tests/: test_block_detection.py  test_company_extraction.py  test_indeed.py  test_laborum.py  test_pipeline.py  test_scraper_parsing.py  test_utils.py
tests/fixtures/: bumeran_sample.html  computrabajo_sample.html
