[project]
name = "orem_scraper_vacantes"
version = "0.1.0"
description = "Scraper de vacantes laborales"
authors = [
    {name = "Orem Analytics",email = "oremcorporation@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "selenium (>=4.38.0,<5.0.0)",
    "undetected-chromedriver (>=3.5.5,<4.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "pyperclip (>=1.11.0,<2.0.0)"
]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]
